# Kanban-board

./: .gitignore  README.md  cabal.project  kanban-monomer.cabal
app/: Main.hs
src/: Model.hs  Update.hs  View.hs
